adjust otg copy and fix for centered ul objects on mobile restricted to about page

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -116,7 +116,7 @@ figcaption {
   }
 }
 
-ul {
+.about__p ul {
   @include u.breakpoint-down(small) {
     text-align: center;
   }
